--- a/W5/LSTM.ipynb
+++ b/W5/LSTM.ipynb
@@ -12,99 +12,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dWAcH6mWYxkE",
-        "outputId": "63a57bed-e8b4-473d-8a9f-1c50291e02e6"
+        "outputId": "6da45056-cfcf-43ac-8920-2194b553f088"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "cost: 0.682592  [  500/12000]\n",
-            "cost: 0.703591  [ 5500/12000]\n",
-            "cost: 0.691807  [10500/12000]\n",
-            "cost: 0.695274  [  500/12000]\n",
-            "cost: 0.699936  [ 5500/12000]\n",
-            "cost: 0.699499  [10500/12000]\n",
-            "cost: 0.707657  [  500/12000]\n",
-            "cost: 0.692731  [ 5500/12000]\n",
-            "cost: 0.699349  [10500/12000]\n",
-            "cost: 0.701817  [  500/12000]\n",
-            "cost: 0.689916  [ 5500/12000]\n",
-            "cost: 0.693892  [10500/12000]\n",
-            "cost: 0.687209  [  500/12000]\n",
-            "cost: 0.701543  [ 5500/12000]\n",
-            "cost: 0.703140  [10500/12000]\n",
-            "cost: 0.698509  [  500/12000]\n",
-            "cost: 0.699606  [ 5500/12000]\n",
-            "cost: 0.696934  [10500/12000]\n",
-            "cost: 0.702899  [  500/12000]\n",
-            "cost: 0.694220  [ 5500/12000]\n",
-            "cost: 0.703196  [10500/12000]\n",
-            "cost: 0.703428  [  500/12000]\n",
-            "cost: 0.688964  [ 5500/12000]\n",
-            "cost: 0.693066  [10500/12000]\n",
-            "cost: 0.699484  [  500/12000]\n",
-            "cost: 0.695921  [ 5500/12000]\n",
-            "cost: 0.707719  [10500/12000]\n",
-            "cost: 0.696188  [  500/12000]\n",
-            "cost: 0.703187  [ 5500/12000]\n",
-            "cost: 0.695359  [10500/12000]\n",
-            "cost: 0.689793  [  500/12000]\n",
-            "cost: 0.698360  [ 5500/12000]\n",
-            "cost: 0.708580  [10500/12000]\n",
-            "cost: 0.697329  [  500/12000]\n",
-            "cost: 0.706887  [ 5500/12000]\n",
-            "cost: 0.698495  [10500/12000]\n",
-            "cost: 0.697641  [  500/12000]\n",
-            "cost: 0.697770  [ 5500/12000]\n",
-            "cost: 0.707196  [10500/12000]\n",
-            "cost: 0.694253  [  500/12000]\n",
-            "cost: 0.700734  [ 5500/12000]\n",
-            "cost: 0.690177  [10500/12000]\n",
-            "cost: 0.694446  [  500/12000]\n",
-            "cost: 0.699221  [ 5500/12000]\n",
-            "cost: 0.702467  [10500/12000]\n",
-            "cost: 0.708978  [  500/12000]\n",
-            "cost: 0.703462  [ 5500/12000]\n",
-            "cost: 0.703271  [10500/12000]\n",
-            "cost: 0.701053  [  500/12000]\n",
-            "cost: 0.706774  [ 5500/12000]\n",
-            "cost: 0.694974  [10500/12000]\n",
-            "cost: 0.709005  [  500/12000]\n",
-            "cost: 0.696419  [ 5500/12000]\n",
-            "cost: 0.699285  [10500/12000]\n",
-            "cost: 0.702968  [  500/12000]\n",
-            "cost: 0.693543  [ 5500/12000]\n",
-            "cost: 0.695239  [10500/12000]\n",
-            "cost: 0.705463  [  500/12000]\n",
-            "cost: 0.704657  [ 5500/12000]\n",
-            "cost: 0.695609  [10500/12000]\n",
-            "254\n",
-            "251\n",
-            "245\n",
-            "250\n",
-            "254\n",
-            "246\n",
-            "240\n",
-            "242\n",
-            "242\n",
-            "245\n",
-            "255\n",
-            "253\n",
-            "246\n",
-            "249\n",
-            "225\n",
-            "258\n",
-            "3955 8000\n",
-            "Test Error: \n",
-            " Accuracy: 49.4%, Avg loss: 0.001405 \n",
-            "\n"
+            "cost: 0.699866, accuracy: 0.500000  [   50/16000]\n",
+            "cost: 0.698153, accuracy: 0.420000  [  550/16000]\n",
+            "cost: 0.686730, accuracy: 0.580000  [ 1050/16000]\n",
+            "cost: 0.696596, accuracy: 0.500000  [ 1550/16000]\n",
+            "cost: 0.677407, accuracy: 0.660000  [ 2050/16000]\n",
+            "cost: 0.695732, accuracy: 0.460000  [ 2550/16000]\n",
+            "cost: 0.693713, accuracy: 0.460000  [ 3050/16000]\n",
+            "cost: 0.692261, accuracy: 0.600000  [ 3550/16000]\n",
+            "cost: 0.692356, accuracy: 0.580000  [ 4050/16000]\n",
+            "cost: 0.692969, accuracy: 0.520000  [ 4550/16000]\n",
+            "cost: 0.692613, accuracy: 0.620000  [ 5050/16000]\n",
+            "cost: 0.693789, accuracy: 0.460000  [ 5550/16000]\n",
+            "cost: 0.695855, accuracy: 0.400000  [ 6050/16000]\n",
+            "cost: 0.694329, accuracy: 0.480000  [ 6550/16000]\n",
+            "cost: 0.693658, accuracy: 0.500000  [ 7050/16000]\n",
+            "cost: 0.686950, accuracy: 0.620000  [ 7550/16000]\n",
+            "cost: 0.693461, accuracy: 0.500000  [ 8050/16000]\n",
+            "cost: 0.693662, accuracy: 0.480000  [ 8550/16000]\n",
+            "cost: 0.692386, accuracy: 0.560000  [ 9050/16000]\n",
+            "cost: 0.695480, accuracy: 0.420000  [ 9550/16000]\n",
+            "cost: 0.692733, accuracy: 0.520000  [10050/16000]\n",
+            "cost: 0.693142, accuracy: 0.520000  [10550/16000]\n",
+            "cost: 0.692533, accuracy: 0.600000  [11050/16000]\n",
+            "cost: 0.691358, accuracy: 0.540000  [11550/16000]\n",
+            "cost: 0.697865, accuracy: 0.420000  [12050/16000]\n",
+            "cost: 0.693261, accuracy: 0.500000  [12550/16000]\n"
           ]
         }
       ],
@@ -162,13 +108,14 @@
         "    vec_list=sequence.pad_sequences(vec_list,maxlen=maxlen,padding=\"post\")\n",
         "    corpus_vec=np.vstack(vec_list)\n",
         "    #return nn.functional.normalize(torch.tensor(corpus_vec).float())\n",
-        "    return torch.tensor(corpus_vec).float()\n",
+        "    return torch.tensor(corpus_vec)\n",
+        "    #return torch.tensor(corpus_vec).float()\n",
         "\n",
         "# print(corpus_vec)\n",
         "\n",
-        "bsize=500\n",
-        "epochs=20\n",
-        "lr=1e-5\n",
+        "bsize=50\n",
+        "epochs=50\n",
+        "lr=1e-3\n",
         "\n",
         "class corpus(Dataset):\n",
         "    def __init__(self,corpus,label,seq):\n",
@@ -189,8 +136,10 @@
         "        self.rnn=True\n",
         "        self.lstm=nn.LSTM(input_size,hidden_size,batch_first=True,num_layers=1)\n",
         "        self.fc=nn.Linear(self.hidden_size,1)\n",
+        "        self.embed=nn.Embedding(len(vect.vocabulary_),input_size)\n",
         "\n",
         "    def forward(self,x,h0=None,c0=None):\n",
+        "        x=self.embed(x)\n",
         "        if h0==None and c0==None:\n",
         "            x, (hn,cn) = self.lstm(x)\n",
         "        else:\n",
@@ -200,6 +149,7 @@
         "        x = torch.flatten(x[:,-1,:],1)\n",
         "        x = self.fc(x)\n",
         "        return nn.Sigmoid()(x), hn,cn\n",
+        "        #return nn.Softmax()(x), hn,cn\n",
         "\n",
         "class dense(nn.Module):\n",
         "    def __init__(self,seq):\n",
@@ -207,9 +157,11 @@
         "        self.seq=seq\n",
         "        self.rnn=False\n",
         "        self.network=nn.Sequential(\n",
-        "            nn.Linear(seq,100),\n",
-        "            nn.Sigmoid(),\n",
-        "            nn.Linear(100,1),\n",
+        "            nn.Linear(seq,360),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Linear(360,180),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Linear(180,1),\n",
         "            nn.Sigmoid()\n",
         "        )\n",
         "    def forward(self,x):\n",
@@ -217,20 +169,22 @@
         "\n",
         "Encoder = LabelEncoder()\n",
         "corpus_vec = transform(data[\"text\"],vect)\n",
-        "train_corpus_vec, test_corpus_vec, train_label, test_label = model_selection.train_test_split(corpus_vec,data[\"label\"],test_size=0.4)\n",
+        "train_corpus_vec, test_corpus_vec, train_label, test_label = model_selection.train_test_split(corpus_vec,data[\"label\"],test_size=0.2)\n",
         "train_label = torch.from_numpy(Encoder.fit_transform(train_label)).float()\n",
         "test_label = torch.from_numpy(Encoder.fit_transform(test_label)).float()\n",
         "#train_corpus_vec = transform(train_corpus,vect)\n",
         "#test_corpus_vec = transform(test_corpus,vect)\n",
-        "lstm_classifier=lstm(1,10,maxlen)\n",
+        "lstm_classifier=lstm(16,20,maxlen)\n",
         "loss_fn=nn.BCELoss()\n",
+        "#loss_fn=nn.BCEWithLogitsLoss()\n",
+        "#loss_fn=nn.MSELoss()\n",
         "optimizer=torch.optim.Adam(lstm_classifier.parameters(),lr=lr)\n",
         "#optimizer=torch.optim.SGD(lstm_classifier.parameters(),lr=lr)\n",
         "#print(len(lstm_classifier(torch.reshape(train_corpus_vec[0],(bsize,maxlen,1)))))\n",
         "\n",
         "dense_classifier=dense(maxlen)\n",
         "\n",
-        "c=dense_classifier\n",
+        "c=lstm_classifier\n",
         "\n",
         "train_dataloader=DataLoader(corpus(train_corpus_vec,train_label,maxlen),batch_size=bsize,shuffle=True)\n",
         "test_dataloader=DataLoader(corpus(test_corpus_vec,test_label,maxlen),batch_size=bsize,shuffle=True)\n",
@@ -243,7 +197,8 @@
         "        x,y=x.to(device),y.to(device)\n",
         "        #print(torch.sum(x[0]!=0))\n",
         "        if model.rnn==True:\n",
-        "            pred,hn,cn=model(x.reshape(bsize,dataloader.dataset.seq,1).to(device),hn,cn)\n",
+        "            #pred,hn,cn=model(x.reshape(bsize,dataloader.dataset.seq,1).to(device),hn,cn)\n",
+        "            pred,hn,cn=model(x,hn,cn)\n",
         "        else:\n",
         "            pred=model(x)\n",
         "        #pred=model(x)\n",
@@ -257,7 +212,7 @@
         "            cn=cn.detach()\n",
         "        if batch % 10 == 0:\n",
         "            cost_val, current = cost.item(), batch * bsize + len(x)\n",
-        "            print(f\"cost: {cost_val:>7f}  [{current:>5d}/{size:>5d}]\")\n",
+        "            print(f\"cost: {cost_val:>7f}, accuracy: {(torch.round(pred.flatten())==y).sum().item()/bsize:>7f}  [{current:>5d}/{size:>5d}]\")\n",
         "\n",
         "def test_loop(dataloader, model, loss_fn):\n",
         "    model.eval()\n",
@@ -280,8 +235,9 @@
         "            correct += ncorrect\n",
         "\n",
         "    print(correct,size)\n",
-        "    print(f\"Test Error: \\n Accuracy: {(100*correct/size):>0.1f}%, Avg loss: {test_loss/size:>8f} \\n\")\n",
+        "    print(f\"Test Error: \\n Accuracy: {(100*correct/size):>0.1f}%, Avg loss: {100*test_loss/size:>8f} \\n\")\n",
         "\n",
+        "#print(corpus_vec[0])\n",
         "for epoch in range(epochs):\n",
         "    train(train_dataloader,c,loss_fn,optimizer)\n",
         "test_loop(test_dataloader,c,loss_fn)"
@@ -291,7 +247,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPiys46BlTvjmIlbfz1Y/Yb",
+      "authorship_tag": "ABX9TyOwM0pstzMojUO5sVT32tNm",
       "include_colab_link": true
     },
     "kernelspec": {
