--- a/W3/classifiers.ipynb
+++ b/W3/classifiers.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyP5mJnW55iv8VuRY3KXaPh0",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,22 +19,35 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/nwon24/nlp/blob/main/W3/classifiers.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DZMrGTC51ZeS",
-        "outputId": "f8ba25c2-df15-46d2-9b77-ba661271bf51"
+        "outputId": "b98934b1-ab6b-4ab8-e22f-c2c9297079a0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "SVM Accuracy ->  87.73333333333333\n",
-            "Logistic regression Accuracy ->  86.8\n"
+            "SVM Accuracy ->  85.72\n",
+            "Logistic regression Accuracy ->  85.56666666666666\n",
+            "Write your review:\n",
+            "very good\n",
+            "POSITIVE\n"
           ]
         }
       ],
@@ -47,7 +62,7 @@
         "\n",
         "labels=[\"NEGATIVE\",\"POSITIVE\"]\n",
         "\n",
-        "data=pd.read_csv(\"corpus.csv\",encoding=\"latin1\")\n",
+        "data=pd.read_csv(\"xaa\",encoding=\"utf-8\")\n",
         "\n",
         "tfidf  = TfidfVectorizer()\n",
         "corpus = tfidf.fit_transform(data[\"text\"])\n",
@@ -98,7 +113,14 @@
         "print(\"Logistic regression Accuracy -> \",correct*100/n)\n",
         "f.write(\"\\nOverall accuracy: %.2f\" % (correct*100/n))\n",
         "\n",
-        "f.close()"
+        "f.close()\n",
+        "\n",
+        "def classify(model, vectoriser, mes):\n",
+        "    vect = vectoriser.transform([mes])\n",
+        "    return labels[model.predict(vect).item()]\n",
+        "\n",
+        "text=input(\"Write your review:\\n\")\n",
+        "print(classify(lr,tfidf,text))"
       ]
     },
     {
