--- a/W7/BERT.ipynb
+++ b/W7/BERT.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPHvhVIPSKeGhMdxxzpxH1B",
+      "authorship_tag": "ABX9TyP0o7tWZsInHs6Dvj9IGwec",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -911,7 +911,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Testing"
+        "# Testing\n",
+        "\n",
+        "To turn the predictions back into labels, we need to apply the `Sigmoid()` activation function on the `logits` of the prediction. This is because the `logit` function is the inverse of the `Sigmoid` function."
       ],
       "metadata": {
         "id": "Ovy0wM2QJ1a-"
