--- a/W3/classifiers.ipynb
+++ b/W3/classifiers.ipynb
@@ -36,17 +36,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DZMrGTC51ZeS",
-        "outputId": "b98934b1-ab6b-4ab8-e22f-c2c9297079a0"
+        "outputId": "919760d0-e3e9-4a4b-f05d-cd58b0e78ff2"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "SVM Accuracy ->  85.72\n",
-            "Logistic regression Accuracy ->  85.56666666666666\n",
+            "SVM Accuracy ->  85.05\n",
+            "Logistic regression Accuracy ->  84.3\n",
             "Write your review:\n",
-            "very good\n",
+            "very very good\n",
             "POSITIVE\n"
           ]
         }
