--- a/W3/classifiers.ipynb
+++ b/W3/classifiers.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyP5mJnW55iv8VuRY3KXaPh0",
+      "authorship_tag": "ABX9TyMuKLJH9EgV93Sw4+X6vTir",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,8 +13,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -36,17 +34,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DZMrGTC51ZeS",
-        "outputId": "919760d0-e3e9-4a4b-f05d-cd58b0e78ff2"
+        "outputId": "78e50a1c-1381-4fbb-907e-f5b9a0623d30"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "SVM Accuracy ->  85.05\n",
-            "Logistic regression Accuracy ->  84.3\n",
+            "SVM Accuracy ->  86.49\n",
+            "Logistic regression Accuracy ->  85.81\n",
             "Write your review:\n",
-            "very very good\n",
+            "very very good!\n",
             "POSITIVE\n"
           ]
         }
@@ -66,7 +64,7 @@
         "\n",
         "tfidf  = TfidfVectorizer()\n",
         "corpus = tfidf.fit_transform(data[\"text\"])\n",
-        "train_corpus, test_corpus, train_label, test_label = model_selection.train_test_split(data[\"text\"],data['label'],test_size=0.3)\n",
+        "train_corpus, test_corpus, train_label, test_label = model_selection.train_test_split(data[\"text\"],data['label'],test_size=0.2)\n",
         "Encoder = LabelEncoder()\n",
         "train_label = Encoder.fit_transform(train_label)\n",
         "test_label = Encoder.fit_transform(test_label)\n",
